<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="130dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/digital_house_foods"
            android:textColor="@color/white"
            android:textSize="27sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="24dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtRegisterName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/purple">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="24dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/purple"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="24dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtRegisterPassword"
            android:layout_width="match_parent"
            android:fontFamily="@font/roboto_bold"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="24dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtRegisterRepeatPassword"
            android:layout_width="match_parent"
            android:fontFamily="@font/roboto_bold"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:textColor="@color/purple"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegisterRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="23dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/button_color"
            android:padding="10dp"
            android:text="@string/register"
            android:textSize="21sp"
            app:cornerRadius="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="23dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>